public class BusTicket extends Ticket {

    public BusTicket(){
    }

    public String ticketDesc() {
        return " Bus";
    }

    public Double getPrice() {
        return 7.00;
    }
}
