package Decorator;

public abstract class Ticket {

    public abstract String ticketDesc();
    public abstract Double getPrice();

}

